--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ add_executable(${PROJECT_NAME} main.cpp Car.cpp Road.cpp Simulation.cpp Spring.c
 #add_executable("sciplot" sciplot.cpp)
 
 target_link_libraries(${PROJECT_NAME} PUBLIC matplot)
+target_link_libraries(${PROJECT_NAME} PUBLIC fftw3)
 #target_link_libraries("sciplot" PUBLIC sciplot)
 #target_link_libraries("testematplotpp1" PUBLIC matplot)
